--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -76,7 +76,7 @@
                             <button mat-button color="warn"
                                     mat-raised-button
                                     color="accent"
-                                    class="btn-table info-button sin-diligenciar"
+                                    class="btn-table info-button"
                                     *ngIf="element.respuestaCodigo === noCumpleCodigo"
                                     (click)="getObservacion( element, i, j )">
                                     Observaciones
@@ -85,7 +85,7 @@
                             <button mat-button color="warn"
                                     mat-raised-button
                                     color="accent"
-                                    class="btn-table info-button sin-diligenciar"
+                                    class="btn-table info-button"
                                     *ngIf="element.tieneSubsanacion === true"
                                     (click)="observacionSubsanacion( element, j )">
                                     Observaciones
