--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/validar-financ-solicitud-pago/validar-financ-solicitud-pago.component.html
@@ -73,7 +73,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="subsanarSolicitud( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.tieneSubsanacion === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.tieneSubsanacion === true">
                                 Subsanar solicitud
                         </button>
 
@@ -81,7 +81,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="changueStatusSolicitudPago( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.tieneSubsanacion === false">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.tieneSubsanacion === false">
                                 Enviar para orden de giro
                         </button>
 
@@ -89,7 +89,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="getRechazo( element )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.estaRechazada === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.estaRechazada === true">
                                 Rechazar solicitud
                         </button>
 
@@ -126,7 +126,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="subsanarSolicitud( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.tieneSubsanacion === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.tieneSubsanacion === true">
                                 Subsanar solicitud
                         </button>
 
@@ -134,7 +134,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="changueStatusSolicitudPago( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.tieneSubsanacion === false">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.tieneSubsanacion === false">
                                 Enviar para orden de giro
                         </button>
 
@@ -142,7 +142,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="getRechazo( element )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.estaRechazada === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoValidacionFinanciera && element.registroCompletoValidacionFinanciera === true && element.estaRechazada === true">
                                 Rechazar solicitud
                         </button>
 
