--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-valid-listchequeo-vfsp/form-valid-listchequeo-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/form-valid-listchequeo-vfsp/form-valid-listchequeo-vfsp.component.html
@@ -84,7 +84,7 @@
                                 <!--A ese primer boton verificar si se pone esto [class.sin-diligenciar]="element.item==1" (dbenitez)-->
                                 <button mat-raised-button
                                         color="accent"
-                                        class="btn-table info-button"
+                                        class="btn-table"
                                         type="button"
                                         *ngIf="noCumpleCodigo === element.get( 'respuestaRevisionTecnicaCodigo' ).value"
                                         (click)="getSubsanacion( element, i, j )">
