--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
@@ -84,7 +84,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="subsanarSolicitud( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.registroCompletoVerificacionFinanciera === true && element.tieneSubsanacion === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.tieneSubsanacion === true">
                                 Subsanar solicitud
                         </button>
 
@@ -100,7 +100,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="getRechazo( element )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.registroCompletoVerificacionFinanciera === true && element.estaRechazada === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.estaRechazada === true">
                                 Rechazar solicitud
                         </button>
 
@@ -139,7 +139,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="subsanarSolicitud( element.solicitudPagoId )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.registroCompletoVerificacionFinanciera === true && element.tieneSubsanacion === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.tieneSubsanacion === true">
                                 Subsanar solicitud
                         </button>
 
@@ -155,7 +155,7 @@
                                 color="accent"
                                 class="btn-table"
                                 (click)="getRechazo( element )"
-                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.registroCompletoVerificacionFinanciera === true && element.estaRechazada === true">
+                                *ngIf="element.estadoCodigo === listaEstadoSolicitudPago.enProcesoVerificacionFinanciera && element.estaRechazada === true">
                                 Rechazar solicitud
                         </button>
 
