fix subsanacion solicitudPago

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/ver-detalle-expensas/ver-detalle-expensas.component.html
@@ -26,6 +26,7 @@
             <app-validar-lista-chequeo [solicitudPago]="solicitudPago" [esVerDetalle]="true"></app-validar-lista-chequeo>
         </mat-expansion-panel>
     </mat-accordion>
+
     <mat-accordion>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
@@ -45,4 +46,21 @@
             </mat-card>
         </mat-expansion-panel>
     </mat-accordion>
+
+    <div class="mt-3em">
+        <mat-card   class="shipping-card border"
+                    align="left"
+                    style="width: 80%;"
+                    *ngIf="solicitudPago.estadoCodigo === listaEstadoSolicitudPago.solicitudRechazadaPorVerificacionFinanciera || solicitudPago.estadoCodigo === listaEstadoSolicitudPago.solicitudRechazadaPorValidacionFinanciera && solicitudPago.observacionRadicacionSacTecnica !== undefined">
+            <mat-card-header class="header-card">
+                <mat-card-title class="header-card--text card-title-detalle">
+                    Razon del rechazo
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+
+                <section [innerHTML]="solicitudPago.observacionRadicacionSacTecnica" style="margin-left: 2em;"></section>
+            </mat-card-content>
+        </mat-card>
+    </div>
 </section>
