--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -176,7 +176,7 @@
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
 
-              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensiónnnnnnnnnnnnnnnn: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }} </p>
