--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/form-registrar-novedad-accord/form-registrar-novedad-accord.component.html
@@ -32,6 +32,20 @@
                 </mat-select>
               </mat-form-field>
             </div>
+            <span class="icon-incompleto">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (addressForm.get('motivosNovedad').invalid && addressForm.get('motivosNovedad').touched) ||
+                  (addressForm.get('motivosNovedad').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
@@ -57,6 +71,20 @@
             <span class="contador miles mt-3em" *ngIf="!addressForm.get('resumenJustificacionNovedad').value">
               1000
             </span>
+            <span class="icon-incompleto mt-3em">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (addressForm.get('resumenJustificacionNovedad').invalid && addressForm.get('resumenJustificacionNovedad').touched) ||
+                  (addressForm.get('resumenJustificacionNovedad').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
@@ -65,8 +93,8 @@
           <div class="row">
             <div class="pr-1">
               <label class="label-left" for="presupuestoAdicional" [class.color-secondaryColor]="
-                    addressForm.get('presupuestoAdicional').invalid && addressForm.get('presupuestoAdicional').touched ||
-                    addressForm.get('presupuestoAdicional').invalid && estaEditando">
+                    (addressForm.get('presupuestoAdicional').invalid && addressForm.get('presupuestoAdicional').touched) ||
+                    (addressForm.get('presupuestoAdicional').invalid && estaEditando)">
                 Presupuesto adicional solicitado
               </label>
             </div>
@@ -88,6 +116,20 @@
               <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                 matTooltipClass="info-tooltip">
                 {{20 - presupuestoAdicional.value.length}}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('presupuestoAdicional').invalid && addressForm.get('presupuestoAdicional').touched) ||
+                    (addressForm.get('presupuestoAdicional').invalid && estaEditando)
+                  "
+                />
               </span>
             </div>
           </div>
@@ -114,6 +156,20 @@
                 class="btn-calendario">
                 <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
               </button>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
+                    (addressForm.get('fechaInicio').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
@@ -137,6 +193,20 @@
               <button mat-button color="primary" type="button" (click)="pickerPlazoFin.open()" class="btn-calendario">
                 <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
               </button>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('fechaFinal').invalid && addressForm.get('fechaFinal').touched) ||
+                    (addressForm.get('fechaFinal').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
@@ -342,6 +412,20 @@
                   <span class="contador miles mt-3em" *ngIf="!clausula.get('clausulaModificar').value">
                     1000
                   </span>
+                  <span class="icon-incompleto mt-3em">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                      clausula.get('clausulaModificar').invalid && clausula.get('clausulaModificar').touched ||
+                      clausula.get('clausulaModificar').invalid && estaEditando
+                      "
+                    />
+                  </span>
                 </div>
               </div>
             </div>
@@ -371,6 +455,20 @@
                   <span class="contador miles mt-3em" *ngIf="!clausula.get('ajusteSolicitadoClausula').value">
                     1000
                   </span>
+                  <span class="icon-incompleto mt-3em">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                        clausula.get('ajusteSolicitadoClausula').invalid && clausula.get('ajusteSolicitadoClausula').touched ||
+                        clausula.get('ajusteSolicitadoClausula').invalid && estaEditando
+                      "
+                    />
+                  </span>
                 </div>
               </div>
             </div>
@@ -399,12 +497,26 @@
                 ¿Cuenta con la documentación soporte suficiente?
               </label>
             </div>
-            <div class="col">
+            <div class="col d-flex">
               <mat-radio-group class="radioInput" formControlName="documentacionSuficiente" required>
                 <mat-radio-button [value]="true">Sí</mat-radio-button>
                 <mat-radio-button [value]="false">No</mat-radio-button>
               </mat-radio-group>
               <span class="required-form-group">*</span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('documentacionSuficiente').invalid && addressForm.get('documentacionSuficiente').touched) ||
+                    (addressForm.get('documentacionSuficiente').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
@@ -431,6 +543,20 @@
             <span class="contador miles mt-3em" *ngIf="!addressForm.get('conceptoTecnico').value">
               2000
             </span>
+            <span class="icon-incompleto mt-3em">
+              <img
+                class="icon-incompleto--img"
+                src="assets/img/icon/incompleto.svg"
+                alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
+                *ngIf="
+                  (addressForm.get('conceptoTecnico').invalid && addressForm.get('conceptoTecnico').touched) ||
+                  (addressForm.get('conceptoTecnico').invalid && estaEditando)
+                "
+              />
+            </span>
           </div>
         </div>
       </div>
@@ -454,6 +580,20 @@
                 class="btn-calendario">
                 <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
               </button>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('fechaConceptoTecnico').invalid && addressForm.get('fechaConceptoTecnico').touched) ||
+                    (addressForm.get('fechaConceptoTecnico').invalid && estaEditando)
+                  "
+                />
+              </span>
             </div>
           </div>
         </div>
@@ -471,11 +611,25 @@
             <div class="col d-flex">
               <mat-form-field class="full-width">
                 <input matInput type="text" formControlName="numeroRadicadoSolicitud" #numeroRadicadoSolicitud
-                  maxlength="20" required>
+                  maxlength="20">
               </mat-form-field>
               <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
                 matTooltipClass="info-tooltip">
                 {{20 - numeroRadicadoSolicitud.value.length}}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('numeroRadicadoSolicitud').invalid && addressForm.get('numeroRadicadoSolicitud').touched) ||
+                    (addressForm.get('numeroRadicadoSolicitud').invalid && estaEditando)
+                  "
+                />
               </span>
             </div>
           </div>
