--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/registrar-solicitud-interventoria/registrar-solicitud-interventoria.component.html
@@ -15,7 +15,14 @@
     <div class="col-md-8">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" for="numeroContrato">Número de contrato:</label>
+          <label class="label-left" for="numeroContrato"
+            [class.color-secondaryColor]="
+              (numeroContrato.invalid && numeroContrato.touched) ||
+              (numeroContrato.invalid && estaEditando)
+            "
+          >
+            Número de contrato:
+          </label>
         </div>
         <div class="col d-flex">
           <mat-form-field
@@ -35,6 +42,20 @@
             </mat-autocomplete>
           </mat-form-field>
           <img src="assets/img/icon/lupa.svg" alt="Buscar" class="buscar" (click)="buscar.focus()">
+          <span class="icon-incompleto">
+            <img
+              class="icon-incompleto--img"
+              src="assets/img/icon/incompleto.svg"
+              alt="este campo es requerido"
+              [matTooltipPosition]="'above'"
+              matTooltip="Debe ingresar la información en el campo para continuar"
+              matTooltipClass="info-tooltip"
+              *ngIf="
+                (numeroContrato.invalid && numeroContrato.touched) ||
+                (numeroContrato.invalid && estaEditando)
+              "
+            />
+          </span>
         </div>
       </div>
     </div>
@@ -43,7 +64,14 @@
     <div class="col-md-8">
       <div class="row">
         <div class="pr-1">
-          <label class="label-left" for="novedadesolicitud">La novedad aplica a:</label>
+          <label class="label-left" for="novedadesolicitud"
+          [class.color-secondaryColor]="
+            (novedadAplicada.invalid && novedadAplicada.touched) ||
+            (novedadAplicada.invalid && estaEditando)
+          "
+        >
+          La novedad aplica a:
+        </label>
         </div>
         <div class="col">
           <mat-form-field class="select-width">
@@ -54,6 +82,20 @@
             </mat-select>
           </mat-form-field>
         </div>
+        <span class="icon-incompleto">
+          <img
+            class="icon-incompleto--img"
+            src="assets/img/icon/incompleto.svg"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
+            *ngIf="
+              (novedadAplicada.invalid && novedadAplicada.touched) ||
+              (novedadAplicada.invalid && estaEditando)
+            "
+          />
+        </span>
       </div>
     </div>
   </div>
