--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -130,12 +130,13 @@
             <strong> Fecha de la sesión de la instancia: </strong>
             {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
-          <!-- <p>
-            <strong>
-              Tipo de Novedad:
-            </strong>
-            Modificación de Condiciones Contractuales
-          </p> -->
+          <p>
+            <strong> Tipo de Novedad: </strong>
+            <span *ngFor="let tipoNovedad of novedad.novedadContractualDescripcion; let i = index">
+              {{ tipoNovedad.nombreTipoNovedad
+              }}<span *ngIf="i + 1 !== novedad.novedadContractualDescripcion.length">,</span>
+            </span>
+          </p>
         </mat-card-content>
       </mat-card>
       <mat-accordion>
@@ -187,7 +188,8 @@
               </p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
-                <strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }}
+                <strong>Presupuesto adicional solicitado: </strong>
+                {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }}
               </p>
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
