fix validacion descuentos 4.3.3

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -211,6 +211,7 @@
                                                             <mat-form-field class="full-width">
                                                                 <input  matInput
                                                                         #valorDescuento
+                                                                        min="0"
                                                                         maxlength="20"
                                                                         required
                                                                         currencyMask
@@ -377,6 +378,7 @@
                                                                             <mat-form-field class="full-width w-75">
                                                                                 <input  matInput
                                                                                         #valorDescuento
+                                                                                        min="0"
                                                                                         currencyMask
                                                                                         maxlength="20"
                                                                                         required
