--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -272,6 +272,7 @@
                                                                                 <mat-form-field class="full-width">
                                                                                     <input  matInput
                                                                                             #valorDescuento
+                                                                                            min="0"
                                                                                             maxlength="20"
                                                                                             required
                                                                                             currencyMask
