--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -127,10 +127,11 @@
       {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
     </p>
     <p>
-      <strong>
-        Tipo de novedad:
-      </strong>
-     {{ tipoNovedadNombre }}
+      <strong> Tipo de Novedad: </strong>
+      <span *ngFor="let tipoNovedad of novedad.novedadContractualDescripcion; let i = index">
+        {{ tipoNovedad.nombreTipoNovedad
+        }}<span *ngIf="i + 1 !== novedad.novedadContractualDescripcion.length">,</span>
+      </span>
     </p>
 
   </mat-card-content>
