--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -134,12 +134,13 @@
             <strong> Fecha de la sesión de la instancia: </strong>
             {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
-          <!-- <p>
-            <strong>
-              Tipo de Novedad:
-            </strong>
-            Modificación de Condiciones Contractuales
-          </p> -->
+          <p>
+            <strong> Tipo de Novedad: </strong>
+            <span *ngFor="let tipoNovedad of novedad.novedadContractualDescripcion; let i = index">
+              {{ tipoNovedad.nombreTipoNovedad
+              }}<span *ngIf="i + 1 !== novedad.novedadContractualDescripcion.length">,</span>
+            </span>
+          </p>
         </mat-card-content>
       </mat-card>
       <mat-accordion>
