--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/generar-orden-giro/generar-orden-giro.component.html
@@ -16,6 +16,15 @@
         interventoría suscritos que se encuentran activos y cuentan con acta de inicio aprobada o para conceptos especiales de Expensas u
         Otros costos/servicios que serán ejecutados en el marco de la gestión de los proyectos de infraestructura que ejecuta el FFIE.
     </div>
+    <div class="busqueda">
+        <mat-form-field appearance="outline" class="busqueda--input">
+          <mat-label>Buscador / Filtro</mat-label>
+          <input matInput #filtro (keyup)="applyFilter($event)" />
+        </mat-form-field>
+        <button mat-button color="primary" class="busqueda--img" (click)="filtro.focus()">
+          <img src="assets/img/icon/lupa.svg" alt="Buscar" />
+        </button>
+      </div>
     <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaValidacionFinanciera">
