--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-obra/validar-novedad-contrato-obra.component.html
@@ -265,12 +265,26 @@
           ¿Desde la supervisión tiene observaciones a la solicitud de novedad?
         </label>
       </div>
-      <div>
+      <div class="d-flex">
         <mat-radio-group class="radioInput" formControlName="tieneObservaciones">
           <mat-radio-button [value]="true">Sí</mat-radio-button>
           <mat-radio-button [value]="false">No</mat-radio-button>
         </mat-radio-group>
         <span class="required-form-group m-0">*</span>
+        <span class="icon-incompleto">
+          <img
+            class="icon-incompleto--img"
+            src="assets/img/icon/incompleto.svg"
+            alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
+            *ngIf="
+              (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+              (addressForm.get('tieneObservaciones').invalid && estaEditando)
+            "
+          />
+        </span>
       </div>
     </div>
 
