--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/verificar-solicitud-novedad/verificar-solicitud-novedad.component.html
@@ -173,6 +173,18 @@
                 {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }}
               </p>
 
+              <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
+                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
+                  <mat-card-title class="header-card--text sub-text"> 
+                    Clausula {{ i + 1 }}
+                  </mat-card-title>
+                  <p><strong>Cláusula a modificar: </strong> </p>
+                  <section [innerHTML]="clausula.clausulaAmodificar" style="margin-left: 2em"></section>
+                  <p><strong>Ajuste solicitado a la cláusula: </strong> </p>
+                  <section [innerHTML]="clausula.ajusteSolicitadoAclausula" style="margin-left: 2em"></section>
+                </section>
+              </section>
+
               <p>
                 <strong>¿Cuenta con la documentación soporte suficiente?: </strong>
                 {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}
