Ver Saldos y Rendimientos

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/saldos-y-rendimientos/saldos-y-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/saldos-y-rendimientos/saldos-y-rendimientos.component.html
@@ -32,13 +32,13 @@
         </td>
       </ng-container>
   
-      <!-- comprometidoDDP Column -->
-      <ng-container matColumnDef="comprometidoDDP">
+      <!-- comprometidoEnDdp Column -->
+      <ng-container matColumnDef="comprometidoEnDdp">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Comprometido en DDP
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.comprometidoDDP }}
+          {{ element.comprometidoEnDdp }}
         </td>
       </ng-container>
   
