--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/tabla-fuentes/tabla-fuentes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/tabla-fuentes/tabla-fuentes.component.html
@@ -81,7 +81,7 @@
             color="accent"
             class="btn-table"
             [disabled]="!element.registroCompleto"
-            (click)="verSaldosyRendimientos(element.fuenteFinanciacionId)"
+            (click)="verSaldosyRendimientos(element.aportanteId)"
           >
           Ver Saldos y Rendimientos
           </button>
