Fase-2-Paquete-5 fix payment save

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-rendimientos/components/gestionar-rendimientos/gestionar-rendimientos.component.html
@@ -58,7 +58,8 @@
                         Enviar inconsistencias
                     </button>
                     <button mat-raised-button color="accent" class="btn-table" 
-                        *ngIf="element.registrosConsistentes > 0 || element.registrosInconsistentes > 0"
+                        *ngIf="(element.registrosConsistentes > 0 || element.registrosInconsistentes > 0) &&
+                            element.registrosInconsistentes !== element.totalRegistros"
                         (click)="downloadManagedPerformances(element.cargaPagosRendimientosId)"
                         >
                         Descargar resultado
