--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/form-detallar-solicitud-novedad/form-detallar-solicitud-novedad.component.html
@@ -30,11 +30,26 @@
                     Tipo de aportante:
                   </label>
                 </div>
-                <div class="col">
+               <!-- <div class="col">
                   <mat-form-field class="select-width">
                     <mat-select required formControlName="tipoAportante">
                       <mat-option *ngFor="let tipoAportante of tipoAportantes" [value]="tipoAportante.codigo">
                         {{ tipoAportante.nombre }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>-->
+                <div class="col">
+                  <mat-form-field
+                    class="select-width"
+                  >
+                    <mat-select
+                      required
+                      formControlName="tipoAportante"
+                      (selectionChange)="getAportante($event.value, 0)"
+                    >
+                      <mat-option *ngFor="let listado of listaTipoAportante" [value]="listado.dominioId">
+                       {{ listado.nombre }}
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
@@ -56,7 +71,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="aportante.get('tipoAportante').value === '2'">
+          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -71,7 +86,7 @@
                     Departamento
                   </label>
                 </div>
-                <div class="col">
+                <!--<div class="col">
                   <mat-form-field class="select-width capitalize">
                     <mat-select
                       formControlName="depaetamento"
@@ -87,6 +102,23 @@
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
+                </div>-->
+                <div class="col capitalize">
+                  <mat-form-field
+                    class="select-width"
+                  >
+                    <mat-select required 
+                    formControlName="depaetamento"
+                    (selectionChange)="getMunAportante($event.value, 0)">
+                      <mat-option
+                        *ngFor="let listado of listadoDepto[0]"
+                        [value]="listado.localizacionId"
+                        class="capitalize"
+                      >
+                        {{ listado.descripcion }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
                 </div>
                 <span class="icon-incompleto">
                   <img
@@ -105,7 +137,7 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="aportante.get('tipoAportante').value === '2'">
+          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.ET">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
@@ -120,11 +152,26 @@
                     Municipio
                   </label>
                 </div>
-                <div class="col">
+                <!--app-expansion-panel class="col">
                   <mat-form-field class="select-width capitalize">
                     <mat-select formControlName="municipio" required>
                       <mat-option *ngFor="let municipio of listaMunicipios" class="capitalize" [value]="municipio">
                         {{ municipio.descripcion }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>-->
+                <div class="col capitalize">
+                  <mat-form-field class="select-width">
+                    <mat-select 
+                    formControlName="municipio"
+                    (selectionChange)="getVigenciaByMun($event.value, 0)">
+                      <mat-option
+                        *ngFor="let listado of listadoMun[0]"
+                        [value]="listado.localizacionId"
+                        class="capitalize"
+                      >
+                        {{ listado.descripcion }}
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
@@ -146,7 +193,93 @@
               </div>
             </div>
           </div>
-          <div class="row" *ngIf="!nuevoAportante.value || aportante.get('tipoAportante').value === '3'">
+          <div class="row" *ngIf="aportante.get('tipoAportante').value == this.tipoAportante.Tercero">
+            <div class="col-md-8">
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                    class="label-left"
+                  >
+                    Nombre del aportante
+                  </label>
+                </div>
+                <div class="col">
+                  <mat-form-field
+                    class="select-width"
+                  >
+                    <mat-select
+                      required
+                      formControlName="nombreAportante"
+                      (selectionChange)="getVigencia($event.value, 0)"
+                    >
+                      <mat-option *ngFor="let listado of listaNombreAportantes[0]" [value]="listado">
+                        {{ listado }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+                <span class="icon-incompleto">
+                  <img
+                    class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="
+                      (aportante.get('nombreAportante').invalid && aportante.get('nombreAportante').touched) ||
+                      (aportante.get('nombreAportante').invalid && estaEditando)
+                    "
+                  />
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row" *ngIf="nuevoAportante.value">
+            <div class="col-md-8">
+              <div class="row">
+                <div class="pr-1">
+                  <label
+                  for="cofinanciacionAportanteId"
+                  class="label-left"
+                  [class.color-secondaryColor]="
+                    (aportante.get('cofinanciacionAportanteId').invalid && aportante.get('cofinanciacionAportanteId').touched) ||
+                    (aportante.get('cofinanciacionAportanteId').invalid && estaEditando)
+                  ">
+                  Vigencia del acuerdo de cofinanciación
+                  </label>
+                </div>
+                <div class="col d-flex">
+                  <mat-form-field class="select-width">
+                    <mat-select
+                      required
+                      formControlName="cofinanciacionAportanteId"
+                      (selectionChange)="changeAportante(j)"
+                    >
+                      <mat-option *ngFor="let listado of listaVigencias[0]" [value]="listado.cofinanciacionAportanteId">
+                        Vigencia:{{ listado.vigencia }} Creado el:{{ listado.fechaCreacion | date: 'dd/MM/yyyy' }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+                <span class="icon-incompleto">
+                  <img
+                    class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="
+                      (aportante.get('cofinanciacionAportanteId').invalid && aportante.get('cofinanciacionAportanteId').touched) ||
+                      (aportante.get('cofinanciacionAportanteId').invalid && estaEditando)
+                    "
+                  />
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row" *ngIf="!nuevoAportante.value">
             <div class="col-md-8">
               <div class="row">
                 <div class="pr-1">
