--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/ver-detalle/ver-detalle.component.html
@@ -156,9 +156,9 @@
               >
                 Plazo solicitado
               </mat-card-title>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Meses: </strong> {{
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional meses: </strong> {{
                 descripcion.plazoAdicionalMeses }}</p>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo Adicional Días: </strong> {{
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>plazo adicional días: </strong> {{
                 descripcion.plazoAdicionalDias }}</p>
 
               <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
@@ -179,13 +179,13 @@
                 {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
               </p>
 
-              <p *ngIf="descripcion.tipoNovedadCodigo == '3'"><strong>Presupuesto adicional solicitado: </strong> {{
-                descripcion.presupuestoAdicionalSolicitado }} </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '3'"><strong>Presupuesto adicional solicitado: </strong>
+                {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }} </p>
 
                 <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                   <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
                     <mat-card-title class="header-card--text sub-text"> 
-                      Clausula {{ i + 1 }}
+                      Cláusula {{ i + 1 }}
                     </mat-card-title>
                     <p><strong>Cláusula a modificar: </strong> </p>
                     <section [innerHTML]="clausula.clausulaAmodificar" style="margin-left: 2em"></section>
