--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-interventoria/ver-detalle-interventoria.component.html
@@ -194,7 +194,9 @@
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
                 <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
-                  <h3><strong> CLAUSULA </strong> {{ i + 1 }}</h3>
+                  <mat-card-title class="header-card--text sub-text">
+                    Cláusula {{ i + 1 }}
+                  </mat-card-title>
                   <p><strong>Cláusula a modificar: </strong></p>
                   <section class="text-justify" [innerHTML]="clausula.clausulaAmodificar"></section>
                   <p><strong>Ajuste solicitado a la cláusula: </strong></p>
