--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-solicitud-de-novedades/components/ver-detalle-solicitud/ver-detalle-solicitud.component.html
@@ -2,12 +2,10 @@
   <div class="container text-center">
     <div class="text-right">
       <a routerLink="../.." mat-button color="primary" class="btn-regresar">
-        <img src="assets/img/icon/regresar.svg" alt="Regresar">
+        <img src="assets/img/icon/regresar.svg" alt="Regresar" />
       </a>
     </div>
-    <h1 class="title-menu--h1">
-      Ver detalle verificación de solicitud de novedad {{ novedad.numeroSolicitud }}
-    </h1>
+    <h1 class="title-menu--h1">Ver detalle verificación de solicitud de novedad {{ novedad.numeroSolicitud }}</h1>
     <p class="info-sub-title">
       Número de contrato <b>{{ novedad.contrato.numeroContrato }}</b>
     </p>
@@ -15,15 +13,11 @@
 
   <mat-card class="shipping-card var-main-gris">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text">
-        Datos del contrato
-      </mat-card-title>
+      <mat-card-title class="header-card--text"> Datos del contrato </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
-        <strong>
-          Nombre del contratista:
-        </strong>
+        <strong> Nombre del contratista: </strong>
         {{ novedad.contrato.contratacion.contratista.nombre }}
       </p>
       <p>
@@ -33,9 +27,7 @@
         </span>
       </p>
       <p>
-        <strong>
-          Número de identificación
-        </strong>
+        <strong> Número de identificación </strong>
         {{ novedad.contrato.contratacion.contratista.numeroIdentificacion }}
       </p>
       <p>
@@ -47,92 +39,94 @@
       <p>
         <strong>Valor del contrato:</strong>
         <span>
-          {{ novedad.proyectosContrato[0].valorTotal | currency:'':'symbol':'3.0' }}
+          {{ novedad.proyectosContrato[0].valorTotal | currency: '':'symbol':'3.0' }}
         </span>
       </p>
       <p>
         <strong>Plazo:</strong>
         <span>
-          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoMeses }} Meses 
-          {{ novedad.contrato.contratacion.disponibilidadPresupuestal[novedad.contrato.contratacion.disponibilidadPresupuestal.length-1].plazoDias }} Días 
+          {{
+            novedad.contrato.contratacion.disponibilidadPresupuestal[
+              novedad.contrato.contratacion.disponibilidadPresupuestal.length - 1
+            ].plazoMeses
+          }}
+          Meses
+          {{
+            novedad.contrato.contratacion.disponibilidadPresupuestal[
+              novedad.contrato.contratacion.disponibilidadPresupuestal.length - 1
+            ].plazoDias
+          }}
+          Días
         </span>
       </p>
       <p>
         <strong>Fecha de inicio de contrato:</strong>
         <span>
-          {{ (novedad.contrato?.fechaActaInicioFase2 ? novedad.contrato?.fechaActaInicioFase2 : novedad.contrato?.fechaActaInicioFase1) | date:'dd/MM/yyyy'}}  
+          {{
+            (novedad.contrato?.fechaActaInicioFase2
+              ? novedad.contrato?.fechaActaInicioFase2
+              : novedad.contrato?.fechaActaInicioFase1
+            ) | date: 'dd/MM/yyyy'
+          }}
         </span>
       </p>
       <p>
         <strong>Fecha de finalización de contrato:</strong>
         <span>
-          {{ (novedad.contrato?.fechaTerminacionFase2 ? novedad.contrato?.fechaTerminacionFase2 : novedad.contrato?.fechaTerminacion) | date:'dd/MM/yyyy'}}
+          {{
+            (novedad.contrato?.fechaTerminacionFase2
+              ? novedad.contrato?.fechaTerminacionFase2
+              : novedad.contrato?.fechaTerminacion
+            ) | date: 'dd/MM/yyyy'
+          }}
         </span>
       </p>
 
       <div *ngIf="novedad.esAplicadaAcontrato !== true">
         <h2 class="card-subTitle">Proyecto asociado</h2>
         <p>
-          <strong>
-            Llave MEN:
-          </strong>
+          <strong> Llave MEN: </strong>
           {{ novedad.proyectosSeleccionado.llaveMen }}
         </p>
         <p>
-          <strong>
-            Departamento:
-          </strong>
+          <strong> Departamento: </strong>
           {{ novedad.proyectosSeleccionado.departamento }}
         </p>
         <p>
-          <strong>
-            Municipio:
-          </strong>
+          <strong> Municipio: </strong>
           {{ novedad.proyectosSeleccionado.municipio }}
         </p>
         <p>
-          <strong>
-            Institución educativa:
-          </strong>
+          <strong> Institución educativa: </strong>
           {{ novedad.proyectosSeleccionado.institucionEducativa }}
         </p>
         <p>
-          <strong>
-            Sede:
-          </strong>
+          <strong> Sede: </strong>
           {{ novedad.proyectosSeleccionado.sede }}
         </p>
-    </div>
+      </div>
     </mat-card-content>
   </mat-card>
 
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Registrar novedad
-        </mat-panel-title>
+        <mat-panel-title class="expansion-style--title"> Registrar novedad </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-card class="shipping-card var-main-gris">
         <mat-card-content>
           <p>
-            <strong>
-              Fecha de solicitud de la novedad:
-            </strong>
+            <strong> Fecha de solicitud de la novedad: </strong>
             {{ novedad.fechaSolictud | date: 'dd/MM/yyyy' }}
           </p>
           <p>
-            <strong>
-              Instancia donde se presentó la solicitud:
-            </strong>
+            <strong> Instancia donde se presentó la solicitud: </strong>
             <span>
               {{ novedad.instanciaNombre }}
             </span>
           </p>
           <p *ngIf="novedad.instanciaNombre !== 'No aplica'">
-            <strong>
-              Fecha de la sesión de la instancia:
-            </strong>
+            <strong> Fecha de la sesión de la instancia: </strong>
             {{ novedad.fechaSesionInstancia | date: 'dd/MM/yyyy' }}
           </p>
           <p>
@@ -142,15 +136,15 @@
               }}<span *ngIf="i + 1 !== novedad.novedadContractualDescripcion.length">,</span>
             </span>
           </p>
-
         </mat-card-content>
       </mat-card>
       <mat-accordion>
-        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor=" let descripcion of novedad.novedadContractualDescripcion; let i = index; ">
+        <mat-expansion-panel
+          class="expansion-style sub-expansion"
+          *ngFor="let descripcion of novedad.novedadContractualDescripcion; let i = index"
+        >
           <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title">
-              Novedad {{ 1 + i }}
-            </mat-panel-title>
+            <mat-panel-title class="expansion-style--title"> Novedad {{ 1 + i }} </mat-panel-title>
           </mat-expansion-panel-header>
           <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
@@ -159,40 +153,68 @@
               </mat-card-title>
             </mat-card-header>
             <mat-card-content>
-              <strong>Motivos de la novedad:</strong> 
-                  <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo;"> {{ motivo.nombreMotivo}}, </section> 
-              
+              <strong>Motivos de la novedad:</strong>
+              <section *ngFor="let motivo of descripcion.novedadContractualDescripcionMotivo">
+                {{ motivo.nombreMotivo }},
+              </section>
+
               <p><strong>Resumen de la justificación de la novedad: </strong></p>
-                <section class="text-justify" [innerHTML]="descripcion.resumenJustificacion"></section>
-                <mat-card-title
-                  class="header-card--text sub-text"
-                  *ngIf="
-                    descripcion.tipoNovedadCodigo == '4' ||
-                    descripcion.tipoNovedadCodigo == '1' ||
-                    descripcion.tipoNovedadCodigo == '2'
-                  "
-                >
+              <section class="text-justify" [innerHTML]="descripcion.resumenJustificacion"></section>
+              <mat-card-title
+                class="header-card--text sub-text"
+                *ngIf="
+                  descripcion.tipoNovedadCodigo == '4' ||
+                  descripcion.tipoNovedadCodigo == '1' ||
+                  descripcion.tipoNovedadCodigo == '2'
+                "
+              >
                 Plazo solicitado
               </mat-card-title>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional meses: </strong> {{ descripcion.plazoAdicionalMeses }}</p>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '4'"><strong>Plazo adicional días: </strong> {{ descripcion.plazoAdicionalDias }}</p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'">
+                <strong>Plazo adicional meses: </strong> {{ descripcion.plazoAdicionalMeses }}
+              </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '4'">
+                <strong>Plazo adicional días: </strong> {{ descripcion.plazoAdicionalDias }}
+              </p>
 
-              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha de inicio de la suspensión: </strong> {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}</p>
-              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'"><strong>Fecha final de la suspensión: </strong> {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }} </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+                <strong>Fecha de inicio de la suspensión: </strong>
+                {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}
+              </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '1' || descripcion.tipoNovedadCodigo == '2'">
+                <strong>Fecha final de la suspensión: </strong>
+                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
+              </p>
 
-              <p *ngIf="descripcion.tipoNovedadCodigo == '3'" ><strong>Presupuesto adicional solicitado: </strong> {{ descripcion.presupuestoAdicionalSolicitado }} </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo == '3'">
+                <strong>Presupuesto adicional solicitado: </strong>
+                {{ descripcion.presupuestoAdicionalSolicitado | currency: '':'symbol':'3.0' }}
+              </p>
 
               <section *ngIf="descripcion.tipoNovedadCodigo === '5'">
-                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index;">
-                  <h3> <strong> CLAUSULA </strong> {{ i + 1 }} </h3>
-                  <p><strong>Cláusula a modificar: </strong> </p>
+                <section *ngFor="let clausula of descripcion?.novedadContractualClausula; let i = index">
+                  <mat-card-title class="header-card--text sub-text"> Cláusula {{ i + 1 }} </mat-card-title>
+                  <p><strong>Cláusula a modificar: </strong></p>
                   <section class="text-justify" [innerHTML]="clausula.clausulaAmodificar"></section>
-                  <p><strong>Ajuste solicitado a la cláusula: </strong> </p>
+                  <p><strong>Ajuste solicitado a la cláusula: </strong></p>
                   <section class="text-justify" [innerHTML]="clausula.ajusteSolicitadoAclausula"></section>
                 </section>
               </section>
-
-              <p><strong>¿Cuenta con la documentación soporte suficiente?: </strong> {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}</p>
+              <mat-card-title class="header-card--text sub-text" *ngIf="descripcion.tipoNovedadCodigo === '6'">
+                Plazo solicitado
+              </mat-card-title>
+              <p *ngIf="descripcion.tipoNovedadCodigo === '6'">
+                <strong>Fecha de inicio del reinicio: </strong>
+                {{ descripcion.fechaInicioSuspension | date: 'dd/MM/yyyy' }}
+              </p>
+              <p *ngIf="descripcion.tipoNovedadCodigo === '6'">
+                <strong>Fecha de finalización del reinicio: </strong>
+                {{ descripcion.fechaFinSuspension | date: 'dd/MM/yyyy' }}
+              </p>
+              <p>
+                <strong>¿Cuenta con la documentación soporte suficiente?: </strong>
+                {{ descripcion.esDocumentacionSoporte === true ? 'Sí' : 'No' }}
+              </p>
               <p><strong>Concepto técnico: </strong></p>
               <section class="text-justify" [innerHTML]="descripcion.conceptoTecnico"></section>
               <p><strong>Fecha concepto técnico: </strong> {{ descripcion.fechaConcepto | date: 'dd/MM/yyyy' }}</p>
@@ -204,39 +226,29 @@
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title ">
-          Soporte de la solicitud
-        </mat-panel-title>
+        <mat-panel-title class="expansion-style--title"> Soporte de la solicitud </mat-panel-title>
       </mat-expansion-panel-header>
 
       <mat-card class="shipping-card var-main-gris">
         <mat-card-header class="header-card header-card--margin">
-          <mat-card-title class="header-card--text">
-            Soporte del registro del proceso
-          </mat-card-title>
+          <mat-card-title class="header-card--text"> Soporte del registro del proceso </mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p>
-            <strong>
-              URL con soporte:
-            </strong>
-            <a [href]="novedad.urlSoporte"
-              target="_blank" rel="noopener noreferrer">
+            <strong> URL con soporte: </strong>
+            <a [href]="novedad.urlSoporte" target="_blank" rel="noopener noreferrer">
               {{ novedad.urlSoporte }}
             </a>
           </p>
         </mat-card-content>
       </mat-card>
-
     </mat-expansion-panel>
   </mat-accordion>
 
   <!-- cuando fue rechazado por interventor -->
   <mat-card class="shipping-card var-main-gris" *ngIf="novedad.estadoCodigo === '9'">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text">
-        Causa del rechazo
-      </mat-card-title>
+      <mat-card-title class="header-card--text"> Causa del rechazo </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
@@ -245,17 +257,14 @@
         </strong>
       </p>
       <div>
-          <section class="text-justify" [innerHTML]="novedad.causaRechazo"></section>
+        <section class="text-justify" [innerHTML]="novedad.causaRechazo"></section>
       </div>
     </mat-card-content>
   </mat-card>
-  
 
   <mat-card class="shipping-card var-main-gris" *ngIf="novedad.observacionApoyo !== undefined">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="header-card--text">
-        Verificación del apoyo a la supervisión
-      </mat-card-title>
+      <mat-card-title class="header-card--text"> Verificación del apoyo a la supervisión </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <p>
@@ -264,9 +273,7 @@
         </strong>
       </p>
       <p>
-        <strong>
-          ¿Tiene observaciones a la solicitud de novedad?:
-        </strong>
+        <strong> ¿Tiene observaciones a la solicitud de novedad?: </strong>
         Sí
       </p>
       <section class="text-justify" [innerHTML]="novedad.observacionApoyo.observaciones"></section>
@@ -276,18 +283,15 @@
   <div *ngIf="novedad.obervacionSupervisorId">
     <mat-card class="shipping-card var-main-gris">
       <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text">
-          Observaciones del supervisor
-        </mat-card-title>
+        <mat-card-title class="header-card--text"> Observaciones del supervisor </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-
         <p>
           <strong>
             {{ novedad.observacionDevolucion.fechaCreacion | date: 'dd/MM/yyyy' }}
           </strong>
         </p>
-          <section class="text-justify" [innerHTML]="novedad.observacionDevolucion.observaciones"></section>
+        <section class="text-justify" [innerHTML]="novedad.observacionDevolucion.observaciones"></section>
       </mat-card-content>
     </mat-card>
   </div>
@@ -312,15 +316,9 @@
     <table class="mat-table cdk-table mat-sort mat-table-style table-form table-form--2 table-gris">
       <thead>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Fecha de revisión
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Responsable de la observación
-          </th>
-          <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-            Historial de observaciones
-          </th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">Fecha de revisión</th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">Responsable de la observación</th>
+          <th class="mat-header-cell cdk-header-cell ng-star-inserted">Historial de observaciones</th>
         </tr>
       </thead>
       <tbody>
@@ -338,5 +336,4 @@
       </tbody>
     </table>
   </div>
-
 </section>
